@@ -36,6 +36,9 @@
 #include "Cache/CacheManagerFeature.h"
 #include "Cache/TransactionalCache.h"
 #include "Cluster/ServerState.h"
+#ifndef ARANGODB_ENABLE_MAINTAINER_MODE
+#include "CrashHandler/CrashHandler.h"
+#endif
 #include "Indexes/SortedIndexAttributeMatcher.h"
 #include "Logger/Logger.h"
 #include "RocksDBEngine/RocksDBCollection.h"
@@ -778,9 +781,30 @@ Result RocksDBPrimaryIndex::update(
     LocalDocumentId const& /*oldDocumentId*/, velocypack::Slice oldDoc,
     LocalDocumentId const& newDocumentId, velocypack::Slice newDoc,
     OperationOptions const& /*options*/, bool /*performChecks*/) {
-  Result res;
   VPackSlice keySlice = transaction::helpers::extractKeyFromDocument(oldDoc);
   TRI_ASSERT(keySlice.binaryEquals(oldDoc.get(StaticStrings::KeyString)));
+
+  Result res;
+  if (oldDoc.get(StaticStrings::KeyString).stringView() !=
+      newDoc.get(StaticStrings::KeyString).stringView()) {
+    res.reset(
+        TRI_ERROR_INTERNAL,
+        absl::StrCat("invalid primary index update in '",
+                     _collection.vocbase().name(), "/", _collection.name()));
+    res.withError([&oldDoc, &newDoc](result::Error& err) {
+      err.appendErrorMessage("; old key: ");
+      err.appendErrorMessage(oldDoc.get(StaticStrings::KeyString).copyString());
+      err.appendErrorMessage("; new key: ");
+      err.appendErrorMessage(newDoc.get(StaticStrings::KeyString).copyString());
+    });
+
+#ifndef ARANGODB_ENABLE_MAINTAINER_MODE
+    CrashHandler::logBacktrace();
+#endif
+    TRI_ASSERT(false) << res.errorMessage();
+    return res;
+  }
+
   RocksDBKeyLeaser key(&trx);
 
   key->constructPrimaryIndexValue(objectId(), keySlice.stringView());
